Fix issue categories workshops not spacing right

--- a/massage/static/massage/css/massage.css
+++ b/massage/static/massage/css/massage.css
@@ -27,7 +27,7 @@
     background-color: #580c2d77;
 }
 p {
-    font-size: 2rem;
+    font-size: 1rem;
     margin-top: 0;
     margin-bottom: 1rem;
     color: #000;
